# DataLakeIndexProofOfConcept

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_viewer.html  CLAUDE.md  LEARNING_NOTES.md  README.md  SESSIONS.md
dagster-project/: README.md  pyproject.toml  workspace.yaml
dagster-project/scripts/: launch-rebuild-lakehouse.ps1  start-dagster-daemon.ps1
dagster-project/src/dagster_project/: __main__.py  definitions.py  delta_io.py  env.py  fact_queries.py  metadata_io.py  postgres_io.py  settings.py  source_data.py
dagster-project/src/dagster_project/assets/: __init__.py  current_snapshot_file_stats.py  current_snapshot_files.py  delta_dimensions.py  delta_facts.py  metadata_exports.py  postgres_mirror.py
dagster-project/tests/: test_definitions.py  test_metadata_and_postgres_io.py  test_predicate_index.py  test_source_and_queries.py
datasource/: README.md  download_examples.py
docker-images/postgres/: Dockerfile  README.md
nsi/: README.md  __init__.py  cli.py  config.py  evaluate_fact_table.py  evaluate_fact_trip_green.py  evaluate_row_group_fact_table.py  evaluate_row_group_multi_predicate.py  indexer.py
